--- a/Assets/css/habitPage.css
+++ b/Assets/css/habitPage.css
@@ -5,8 +5,127 @@ body {
   background-image: linear-gradient(90deg, #a902cf, #7345cd, #00ceab);
   display: flex;
   justify-content: center;
+
 }
 
+.animated-button {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  /* height: 50px;
+  width: 200px; */
+  padding: 10px 40px;
+  border: 4px solid;
+  border-color: transparent;
+  font-size: 16px;
+  background-color: inherit;
+  border-radius: 100px;
+  font-weight: 600;
+  color: greenyellow;
+  box-shadow: 0 0 0 2px greenyellow;
+  cursor: pointer;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  left: 85%;
+  z-index: 1;
+  top: 0.7rem;
+}
+
+.animated-button svg {
+  position: absolute;
+  width: 24px;
+  fill: greenyellow;
+  z-index: 9;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .arr-1 {
+  right: 10px;
+}
+
+.animated-button .arr-2 {
+  left: -25%;
+}
+
+.animated-button .circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  background-color: greenyellow;
+  border-radius: 50%;
+  opacity: 0;
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.animated-button .linkText {
+  position: relative;
+  z-index: 2;
+  transform: translateX(-12px);
+  transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  left: 8%;
+}
+
+.animated-button:hover {
+  box-shadow: 0 0 0 12px transparent;
+  color: #212121;
+  border-radius: 12px;
+}
+
+.animated-button:hover .arr-1 {
+  right: -25%;
+}
+
+.animated-button:hover .arr-2 {
+  left: 10px;
+}
+
+.animated-button:hover .text {
+  transform: translateX(12px);
+}
+
+.animated-button:hover svg {
+  fill: #212121;
+}
+
+.animated-button:active {
+  scale: 0.95;
+  box-shadow: 0 0 0 4px greenyellow;
+}
+
+.animated-button:hover .circle {
+  width: 220px;
+  height: 220px;
+  opacity: 1;
+}
+
+
+#Monthly_Report_Link{
+  position: absolute;
+  z-index: 1;
+  left: 90%;
+  height: 30px;
+  width: 120px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 10px;
+  border-radius: 50px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+}
+
+/* #Monthly_Report_Link > a{
+  text-decoration: none;
+}
+
+#Monthly_Report_Link:hover{
+  color: white;
+  background-color: blueviolet;
+} */
 
 #addHabit{
   position: relative;
@@ -75,7 +194,7 @@ body {
 }
 
 .containerInput > input:not(:placeholder-shown):valid {
-  outline: 4px solid rgb(0, 255, 183);
+  /* outline: 4px solid rgb(0, 255, 183); */
   border-radius: 0;
 }
 
