--- a/Views/reportView.ejs
+++ b/Views/reportView.ejs
@@ -9,7 +9,32 @@
     <title> Monthly Report </title>
 </head>
 <body>
-    <div>
+
+    <%- include('header');%>
+
+
+    <div id="mainDiv">
+        <!-- <dir>
+            <a href="http://localhost:3000/habitPage"> Habit Add </a>
+        </dir> -->
+        <a href="http://localhost:3000/habitPage" style="text-decoration: none;">
+            <button class="animated-button">
+                <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+                ></path>
+                </svg>
+                <span class="linkText">  Habit Add  </span>
+                <span class="circle"></span>
+                <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+                ></path>
+                </svg>
+            </button>
+        </a>
+
+
         <h1 id="title"> July 2024 </h1>
         <table>
             <tr id="days">
@@ -27,6 +52,8 @@
 
         </table>
     </div>
+
+    <%- include('footer');%>
 
     <script>
         const habitsData = <%- JSON.stringify(habits)  %>
