--- a/Views/habitPage.ejs
+++ b/Views/habitPage.ejs
@@ -12,6 +12,7 @@
     <!-- <div id="Monthly_Report_Link">
       <a href="/Monthly_Report"> Monthly Report </a>
     </div> -->
+    <!-- <h1 id="DateToShow"> Date is - <%= new Date().getDate() %> </h1> -->
 
     <button class="animated-button">
       <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
