--- a/Assets/css/footer.css
+++ b/Assets/css/footer.css
@@ -3,6 +3,44 @@ body {
   padding: 0;
 }
 
+.bottom_text {
+  position: absolute;
+  height: 100px;
+  top: 93%;
+  z-index: 1;
+  left: -5px;
+}
+
+.bottom-details .bottom_text {
+  max-width: 1250px;
+  margin: auto;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.bottom-details .bottom_text span,
+.bottom-details .bottom_text a {
+  font-size: 14px;
+  font-weight: 300;
+  color: white;
+  opacity: 0.8;
+  text-decoration: none;
+}
+.bottom-details .bottom_text a:hover {
+  opacity: 1;
+  text-decoration: underline;
+}
+.bottom-details .bottom_text a {
+  margin-right: 10px;
+}
+
+.bottom-details .bottom_text span,
+.bottom-details .bottom_text a {
+  font-size: 20px;
+}
+
+/* ------------------------------------------------------------------------------------------------------ */
+
 #pageFooter {
   position: absolute;
   height: 50px;
@@ -14,7 +52,7 @@ body {
 ul {
   position: relative;
   list-style: none;
-  bottom: 12px;
+  bottom: 10px;
   right: 10px;
 }
 
@@ -51,8 +89,8 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 38px;
   border-radius: 50%;
   color: #4d4d4d;
   background-color: #fff;
