--- a/Views/footer.ejs
+++ b/Views/footer.ejs
@@ -7,6 +7,17 @@
     <title></title>
   </head>
   <body>
+
+    <div class="bottom-details">
+      <div class="bottom_text">
+        <span class="copyright_text">Copyright © 2024 <a href="#">Habits tracker.</a>All rights reserved &nbsp </span>
+        <span class="policy_terms">
+          <a href="#">Privacy policy :</a>
+          <a href="#">Terms & condition</a>
+        </span>
+      </div>
+    </div>
+
     <!-- <h1> footer </h1> -->
     <Div id="pageFooter">
       <ul class="example-2">
