--- a/views/reportView.ejs
+++ b/views/reportView.ejs
@@ -17,7 +17,7 @@
         <!-- <dir>
             <a href="http://localhost:3000/habitPage"> Habit Add </a>
         </dir> -->
-        <a href="http://localhost:3000/habitPage" style="text-decoration: none;">
+        <a href="https://habit-tracker-m8g0.onrender.com/habitPage" style="text-decoration: none;">
             <button class="animated-button">
                 <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
                 <path
