--- a/views/reportView.ejs
+++ b/views/reportView.ejs
@@ -35,7 +35,7 @@
         </a>
 
 
-        <h1 id="title"> July 2024 </h1>
+        <h1 id="title"> <%= new Date().toLocaleString('en-US', { month: 'short'} )%> <%= 1900 + new Date().getYear() %>  </h1>
         <div id="tableDiv">
             <table>
                 <tr id="days">
